--- a/app/src/main/res/layout/activity_novo_usuario.xml
+++ b/app/src/main/res/layout/activity_novo_usuario.xml
@@ -4,31 +4,34 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FFFFFF"
+    android:scrollbarAlwaysDrawHorizontalTrack="true"
     tools:context=".activity.NovoUsuarioActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="70dp"
-        android:layout_marginEnd="15dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="30dp"
         android:background="#DBE4F9"
         android:paddingBottom="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
             android:id="@+id/txvBemVindo"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="30dp"
             android:ems="10"
             android:inputType="textPersonName"
             android:text="Novo Usuário"
             android:textAlignment="center"
-            android:textColor="#9764AA"
+            android:textColor="#131627"
             android:textColorLink="#FFFFFF"
             android:textSize="30sp"
             android:textStyle="bold"
@@ -39,27 +42,103 @@
 
         <EditText
             android:id="@+id/edtNovoNome"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
+            android:layout_width="0dp"
+            android:layout_height="36dp"
+            android:layout_marginTop="30dp"
             android:background="#FFFFFF"
             android:ems="10"
             android:hint="Nome"
             android:inputType="textPersonName"
             android:paddingLeft="40px"
             android:textAlignment="viewStart"
-            android:textColor="#9764AA"
+            android:textColor="#131627"
             android:textColorLink="#FFFFFF"
-            android:textSize="24sp"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:textSize="16sp"
+            app:layout_constraintBottom_toTopOf="@+id/edtNovoDataNascimento"
+            app:layout_constraintEnd_toEndOf="@+id/edtNovoDataNascimento"
             app:layout_constraintHorizontal_bias="0.563"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/edtNovoDataNascimento"
             app:layout_constraintTop_toBottomOf="@+id/txvBemVindo" />
 
         <EditText
+            android:id="@+id/edtNovoDataNascimento"
+            android:layout_width="0dp"
+            android:layout_height="36dp"
+            android:layout_marginTop="10dp"
+            android:background="#FFFFFF"
+            android:ems="10"
+            android:hint="Data de Nascimento"
+            android:inputType="textPersonName"
+            android:paddingLeft="40px"
+            android:textAlignment="viewStart"
+            android:textColor="#131627"
+            android:textColorLink="#FFFFFF"
+            android:textSize="16dp"
+            app:layout_constraintEnd_toEndOf="@+id/edtNovoGenero"
+            app:layout_constraintHorizontal_bias="0.563"
+            app:layout_constraintStart_toStartOf="@+id/edtNovoGenero"
+            app:layout_constraintTop_toBottomOf="@+id/edtNovoNome" />
+
+        <EditText
+            android:id="@+id/edtNovoGenero"
+            android:layout_width="0dp"
+            android:layout_height="36dp"
+            android:layout_marginTop="10dp"
+            android:background="#FFFFFF"
+            android:ems="10"
+            android:hint="Genero"
+            android:inputType="textPersonName"
+            android:paddingLeft="40px"
+            android:textAlignment="viewStart"
+            android:textColor="#131627"
+            android:textColorLink="#FFFFFF"
+            android:textSize="16dp"
+            app:layout_constraintEnd_toEndOf="@+id/edtNovoCpf"
+            app:layout_constraintHorizontal_bias="0.563"
+            app:layout_constraintStart_toStartOf="@+id/edtNovoCpf"
+            app:layout_constraintTop_toBottomOf="@+id/edtNovoDataNascimento" />
+
+        <EditText
+            android:id="@+id/edtNovoCpf"
+            android:layout_width="0dp"
+            android:layout_height="36dp"
+            android:layout_marginTop="10dp"
+            android:background="#FFFFFF"
+            android:ems="10"
+            android:hint="CPF"
+            android:inputType="textPersonName"
+            android:paddingLeft="40px"
+            android:textAlignment="viewStart"
+            android:textColor="#131627"
+            android:textColorLink="#FFFFFF"
+            android:textSize="16dp"
+            app:layout_constraintEnd_toEndOf="@+id/edtNovoTelefone"
+            app:layout_constraintHorizontal_bias="0.495"
+            app:layout_constraintStart_toStartOf="@+id/edtNovoTelefone"
+            app:layout_constraintTop_toBottomOf="@+id/edtNovoGenero" />
+
+        <EditText
+            android:id="@+id/edtNovoTelefone"
+            android:layout_width="0dp"
+            android:layout_height="36dp"
+            android:layout_marginTop="10dp"
+            android:background="#FFFFFF"
+            android:ems="10"
+            android:hint="Telefone"
+            android:paddingLeft="40px"
+            android:textAlignment="viewStart"
+            android:textColor="#131627"
+            android:textColorLink="#FFFFFF"
+            android:textSize="16dp"
+            app:layout_constraintEnd_toEndOf="@+id/edtNovoLogin"
+            app:layout_constraintHorizontal_bias="0.495"
+            app:layout_constraintStart_toStartOf="@+id/edtNovoLogin"
+            app:layout_constraintTop_toBottomOf="@+id/edtNovoCpf" />
+
+        <EditText
             android:id="@+id/edtNovoLogin"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="0dp"
+            android:layout_height="36dp"
             android:layout_marginTop="10dp"
             android:background="#FFFFFF"
             android:ems="10"
@@ -67,18 +146,18 @@
             android:inputType="textPersonName"
             android:paddingLeft="40px"
             android:textAlignment="viewStart"
-            android:textColor="#9764AA"
+            android:textColor="#131627"
             android:textColorLink="#FFFFFF"
-            android:textSize="24sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.563"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/edtNovoNome" />
+            android:textSize="16dp"
+            app:layout_constraintEnd_toEndOf="@+id/edtNovoSenha"
+            app:layout_constraintHorizontal_bias="0.495"
+            app:layout_constraintStart_toStartOf="@+id/edtNovoSenha"
+            app:layout_constraintTop_toBottomOf="@+id/edtNovoTelefone" />
 
         <EditText
             android:id="@+id/edtNovoSenha"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="0dp"
+            android:layout_height="36dp"
             android:layout_marginTop="10dp"
             android:background="#FFFFFF"
             android:ems="10"
@@ -86,64 +165,47 @@
             android:inputType="text"
             android:paddingLeft="40px"
             android:textAlignment="viewStart"
-            android:textColor="#9764AA"
+            android:textColor="#131627"
             android:textColorLink="#FFFFFF"
-            android:textSize="24sp"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:textSize="16dp"
+            app:layout_constraintEnd_toEndOf="@+id/btCriar"
             app:layout_constraintHorizontal_bias="0.563"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/btCriar"
             app:layout_constraintTop_toBottomOf="@+id/edtNovoLogin" />
 
         <EditText
-            android:id="@+id/edtNovoEmail"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:id="@+id/edtNovoConfirmarSenha"
+            android:layout_width="0dp"
+            android:layout_height="36dp"
             android:layout_marginTop="10dp"
             android:background="#FFFFFF"
             android:ems="10"
-            android:hint="E-mail"
+            android:hint="Confirmar Senha"
             android:paddingLeft="40px"
             android:textAlignment="viewStart"
-            android:textColor="#9764AA"
+            android:textColor="#131627"
             android:textColorLink="#FFFFFF"
-            android:textSize="24sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.563"
-            app:layout_constraintStart_toStartOf="parent"
+            android:textSize="16dp"
+            app:layout_constraintEnd_toEndOf="@+id/btCriar"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="@+id/btCriar"
             app:layout_constraintTop_toBottomOf="@+id/edtNovoSenha" />
-
-        <EditText
-            android:id="@+id/edtNovoTelefone"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:ems="10"
-            android:hint="Telefone"
-            android:paddingLeft="40px"
-            android:background="#FFFFFF"
-            android:textAlignment="viewStart"
-            android:textColor="#9764AA"
-            android:textColorLink="#FFFFFF"
-            android:textSize="24sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.563"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/edtNovoEmail" />
 
         <Button
             android:id="@+id/btCriar"
             android:layout_width="271dp"
             android:layout_height="55dp"
-            android:layout_marginTop="28dp"
+            android:layout_marginTop="30dp"
+            android:background="#131627"
             android:text="Criar"
-            android:background="#9764AA"
             android:textColor="#FFFFFF"
             android:textSize="18sp"
             android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.504"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/edtNovoTelefone" />
+            app:layout_constraintTop_toBottomOf="@+id/edtNovoConfirmarSenha" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
