--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="primary">#262c51</color>
+    <color name="secondary">#8C9CFF</color>
+    <color name="darkSecondary">#131627</color>
 </resources>
