--- a/app/src/main/res/drawable/custom_selector.xml
+++ b/app/src/main/res/drawable/custom_selector.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android" >
     <item android:drawable="@drawable/check"
         android:state_checked="false"/>
-    <item android:drawable="@drawable/checked"
+    <item android:drawable="@drawable/layer"
         android:state_checked="true"/>
     <item android:drawable="@drawable/check"/>
 </selector>
