--- a/app/src/main/res/layout/activity_grafico.xml
+++ b/app/src/main/res/layout/activity_grafico.xml
@@ -32,82 +32,6 @@
         android:layout_marginBottom="250dp"
         android:background="@drawable/loading" />
 
-    <CheckBox
-        android:layout_width="35dp"
-        android:layout_height="35dp"
-        android:layout_below="@+id/textView"
-        android:layout_marginStart="17dp"
-        android:layout_marginTop="13dp"
-        android:layout_toEndOf="@+id/imageView"
-        android:button="@drawable/custom_selector"
-        android:text="CheckBox"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textColor="@color/black" />
-
-    <CheckBox
-        android:id="@+id/checkBox3"
-        android:layout_width="35dp"
-        android:layout_height="35dp"
-        android:layout_below="@+id/textView"
-        android:layout_marginStart="122dp"
-        android:layout_marginTop="13dp"
-        android:layout_toEndOf="@+id/imageView"
-        android:button="@drawable/custom_selector"
-        android:text="CheckBox"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textColor="@color/black" />
-
-    <CheckBox
-        android:id="@+id/checkBox4"
-        android:layout_width="35dp"
-        android:layout_height="35dp"
-        android:layout_below="@+id/textView"
-        android:layout_marginStart="173dp"
-        android:layout_marginTop="13dp"
-        android:layout_toEndOf="@+id/imageView"
-        android:button="@drawable/custom_selector"
-        android:text="CheckBox"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textColor="@color/black" />
-
-    <CheckBox
-        android:id="@+id/checkBox5"
-        android:layout_width="35dp"
-        android:layout_height="35dp"
-        android:layout_below="@+id/textView"
-        android:layout_marginStart="227dp"
-        android:layout_marginTop="13dp"
-        android:layout_toEndOf="@+id/imageView"
-        android:button="@drawable/custom_selector"
-        android:text="CheckBox"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textColor="@color/black" />
-
-    <CheckBox
-        android:id="@+id/checkBox6"
-        android:layout_width="35dp"
-        android:layout_height="35dp"
-        android:layout_below="@+id/textView"
-        android:layout_marginStart="278dp"
-        android:layout_marginTop="13dp"
-        android:layout_toEndOf="@+id/imageView"
-        android:button="@drawable/custom_selector"
-        android:text="CheckBox"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textColor="@color/black" />
-
-    <CheckBox
-        android:id="@+id/checkBox2"
-        android:layout_width="35dp"
-        android:layout_height="35dp"
-        android:layout_below="@+id/textView"
-        android:layout_marginStart="69dp"
-        android:layout_marginTop="13dp"
-        android:layout_toEndOf="@+id/imageView"
-        android:button="@drawable/custom_selector"
-        android:text="CheckBox"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textColor="@color/black" />
 
     <TextView
         android:id="@+id/textView2"
@@ -119,35 +43,29 @@
         android:textFontWeight="600"
         android:textColor="@color/white"/>
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <include
+        android:id="@+id/halter"
+        layout="@layout/layout_checks_halter"
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
         android:layout_below="@+id/textView"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="15dp"
-        app:srcCompat="@drawable/halter" />
+        android:layout_marginTop="1dp" />
 
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/imageView"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="20dp"
-        app:srcCompat="@drawable/pilula" />
+    <include
+        android:id="@+id/pilula"
+        layout="@layout/layout_checks_pilula"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_below="@+id/halter"
+        android:layout_marginTop="1dp" />
 
-    <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/imageView2"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="22dp"
-        app:srcCompat="@drawable/bebida" />
+    <include
+        android:id="@+id/bebida"
+        layout="@layout/layout_checks_bebida"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_below="@+id/pilula"
+        android:layout_marginTop="1dp" />
 
     <TextView
         android:id="@+id/textView"
