Ajuste nas imagens dos botões dos eventos

--- a/app/src/main/res/layout/activity_registro_evento.xml
+++ b/app/src/main/res/layout/activity_registro_evento.xml
@@ -26,56 +26,69 @@
         app:layout_constraintVertical_bias="0.137"
         tools:layout_editor_absoluteX="9dp">
 
-        <ImageButton
+        <Button
             android:id="@+id/btnEventoSono"
-            android:layout_width="70dp"
-            android:layout_height="56dp"
-            android:src="@drawable/botao_evento_dormir"
-            tools:layout_editor_absoluteX="12dp"
-            tools:layout_editor_absoluteY="25dp" />
+            android:layout_width="75dp"
+            android:layout_height="75dp"
+            android:drawableTop="@drawable/ic_dormir_desabilitado"
+            android:paddingTop="0dp"
+            android:background="@android:color/transparent"
 
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.055"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.49"
+            />
 
-        <com.google.android.material.button.MaterialButton
+        <Button
             android:id="@+id/btnEventoExercicio"
-            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
-            android:layout_width="56dp"
-            android:layout_height="56dp"
-            app:cornerRadius="28dp"
-            app:icon="@drawable/bebida"
+            android:layout_width="75dp"
+            android:layout_height="75dp"
+            android:drawableTop="@drawable/ic_exercicio_desabilitado"
+            android:paddingTop="0dp"
+            android:background="@android:color/transparent"
+
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.346"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.49" />
+            app:layout_constraintVertical_bias="0.49"
+            />
 
-        <com.google.android.material.button.MaterialButton
+        <Button
             android:id="@+id/btnEventoRemedio"
-            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
-            android:layout_width="56dp"
-            android:layout_height="56dp"
-            app:cornerRadius="28dp"
-            app:icon="@drawable/bebida"
+            android:layout_width="75dp"
+            android:layout_height="75dp"
+            android:drawableTop="@drawable/ic_remedio_desabilitado"
+            android:paddingTop="0dp"
+            android:background="@android:color/transparent"
+
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.618"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.49" />
+            app:layout_constraintVertical_bias="0.49"
+            />
 
-        <com.google.android.material.button.MaterialButton
+        <Button
             android:id="@+id/btnEventoBebida"
-            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
-            android:layout_width="56dp"
-            android:layout_height="56dp"
-            app:cornerRadius="28dp"
-            app:icon="@drawable/bebida"
+            android:layout_width="75dp"
+            android:layout_height="75dp"
+            android:drawableTop="@drawable/ic_bebida_desabilitado"
+            android:paddingTop="0dp"
+            android:background="@android:color/transparent"
+
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.891"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.49" />
+            app:layout_constraintVertical_bias="0.49"
+            />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -172,11 +185,11 @@
 
         <TimePicker
             android:id="@+id/simpleTimePicker"
-            android:layout_width="198dp"
-            android:layout_height="41dp"
+            android:layout_width="310dp"
+            android:layout_height="151dp"
             android:timePickerMode="spinner"
-            tools:layout_editor_absoluteX="29dp"
-            tools:layout_editor_absoluteY="28dp" /> <!-- time picker mode of a time picker -->
+            tools:layout_editor_absoluteX="17dp"
+            tools:layout_editor_absoluteY="8dp" /> <!-- time picker mode of a time picker -->
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -197,4 +210,7 @@
             tools:layout_editor_absoluteX="218dp"
             tools:layout_editor_absoluteY="6dp" />
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
