--- a/app/src/main/res/layout/activity_registro_evento.xml
+++ b/app/src/main/res/layout/activity_registro_evento.xml
@@ -7,20 +7,90 @@
     tools:context=".activity.RegistroEventoActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/constraintLayout4"
-        android:layout_width="393dp"
-        android:layout_height="72dp"
-        tools:layout_editor_absoluteX="-1dp"
-        tools:layout_editor_absoluteY="-1dp">
+        android:id="@+id/constraintLayout3"
+        android:layout_width="372dp"
+        android:layout_height="80dp"
+        android:layout_marginTop="12dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.523"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <devs.mulham.horizontalcalendar.HorizontalCalendarView
             android:id="@+id/calendarView"
-            android:layout_width="384dp"
-            android:layout_height="49dp"
-            android:background="@color/purple_700"
-            app:textColorSelected="#FFFF"
-            tools:layout_editor_absoluteX="4dp"
-            tools:layout_editor_absoluteY="9dp" />
+            android:layout_width="368dp"
+            android:layout_height="80dp"
+            app:selectorColor="@android:color/holo_red_dark"
+            app:textColorNormal="@color/purple_200"
+            app:textColorSelected="@color/purple_200"
+            tools:layout_editor_absoluteX="2dp"
+            tools:layout_editor_absoluteY="3dp" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintLayout"
+        android:layout_width="370dp"
+        android:layout_height="85dp"
+        android:layout_marginTop="4dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.478"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3">
+
+        <Button
+            android:id="@+id/btnEventoSono"
+            android:layout_width="75dp"
+            android:layout_height="75dp"
+            android:layout_marginStart="14dp"
+            android:background="@android:color/transparent"
+
+            android:drawableTop="@drawable/ic_dormir_desabilitado"
+            android:paddingTop="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.4" />
+
+        <Button
+            android:id="@+id/btnEventoExercicio"
+            android:layout_width="75dp"
+            android:layout_height="75dp"
+            android:layout_marginStart="14dp"
+            android:background="@android:color/transparent"
+
+            android:drawableTop="@drawable/ic_exercicio_desabilitado"
+            android:paddingTop="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/btnEventoSono"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
+            android:id="@+id/btnEventoRemedio"
+            android:layout_width="75dp"
+            android:layout_height="75dp"
+            android:layout_marginStart="14dp"
+            android:background="@android:color/transparent"
+
+            android:drawableTop="@drawable/ic_remedio_desabilitado"
+            android:paddingTop="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/btnEventoExercicio"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
+            android:id="@+id/btnEventoBebida"
+            android:layout_width="75dp"
+            android:layout_height="75dp"
+            android:background="@android:color/transparent"
+            android:drawableTop="@drawable/ic_bebida_desabilitado"
+
+            android:paddingTop="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/btnEventoRemedio"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.4" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -28,9 +98,9 @@
         android:id="@+id/constraintLayout2"
         android:layout_width="369dp"
         android:layout_height="82dp"
-        android:layout_marginTop="4dp"
-        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
-        tools:layout_editor_absoluteX="8dp">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">
 
         <Button
             android:id="@+id/btnSonoDeitar"
@@ -103,132 +173,41 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.837" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/constraintLayout5"
-        android:layout_width="378dp"
-        android:layout_height="133dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+    <TimePicker
+        android:id="@+id/spnMomentoHora"
+        android:layout_width="370dp"
+        android:layout_height="132dp"
+        android:timePickerMode="spinner"
         app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
-        app:layout_constraintVertical_bias="0.0"
-        tools:layout_editor_absoluteX="7dp">
-
-        <TimePicker
-            android:id="@+id/simpleTimePicker"
-            android:layout_width="306dp"
-            android:layout_height="129dp"
-            android:timePickerMode="spinner"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0" />
-
-        <!-- time picker mode of a time picker -->
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/constraintLayout3"
-        android:layout_width="363dp"
-        android:layout_height="45dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edtObservacao"
-        tools:layout_editor_absoluteX="14dp">
-
-        <Button
-            android:id="@+id/btnSalvar"
-            android:layout_width="150dp"
-            android:layout_height="40dp"
-            android:text="Salvar"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.917"
-            app:layout_constraintStart_toStartOf="parent"
-            tools:layout_editor_absoluteY="2dp" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/constraintLayout"
-        android:layout_width="382dp"
-        android:layout_height="82dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/constraintLayout4"
-        tools:layout_editor_absoluteX="5dp">
-
-        <Button
-            android:id="@+id/btnEventoSono"
-            android:layout_width="75dp"
-            android:layout_height="75dp"
-            android:background="@android:color/transparent"
-            android:drawableTop="@drawable/ic_dormir_desabilitado"
-            android:paddingTop="0dp"
-
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.052"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.428" />
-
-        <Button
-            android:id="@+id/btnEventoExercicio"
-            android:layout_width="75dp"
-            android:layout_height="75dp"
-            android:background="@android:color/transparent"
-            android:drawableTop="@drawable/ic_exercicio_desabilitado"
-            android:paddingTop="0dp"
-
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.335"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.428" />
-
-        <Button
-            android:id="@+id/btnEventoRemedio"
-            android:layout_width="75dp"
-            android:layout_height="75dp"
-            android:background="@android:color/transparent"
-            android:drawableTop="@drawable/ic_remedio_desabilitado"
-            android:paddingTop="0dp"
-
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.618"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.49" />
-
-        <Button
-            android:id="@+id/btnEventoBebida"
-            android:layout_width="75dp"
-            android:layout_height="75dp"
-            android:background="@android:color/transparent"
-            android:drawableTop="@drawable/ic_bebida_desabilitado"
-            android:paddingTop="0dp"
-
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.908"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.428" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        tools:layout_editor_absoluteX="11dp" />
 
     <EditText
         android:id="@+id/edtObservacao"
         android:layout_width="370dp"
         android:layout_height="70dp"
-        android:layout_marginTop="4dp"
         android:ems="10"
         android:gravity="start|top"
         android:hint="Observação"
         android:inputType="textMultiLine"
-        app:layout_constraintTop_toBottomOf="@+id/constraintLayout5"
-        tools:layout_editor_absoluteX="11dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/spnMomentoHora" />
+
+    <Button
+        android:id="@+id/btnSalvar"
+        android:layout_width="150dp"
+        android:layout_height="40dp"
+        android:text="Salvar"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.954"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/edtObservacao"
+        app:layout_constraintVertical_bias="0.031" />
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
