Implementação de cores do menu inferior

--- a/app/src/main/res/layout/activity_principal.xml
+++ b/app/src/main/res/layout/activity_principal.xml
@@ -20,7 +20,10 @@ tools:context=".activity.PrincipalActivity">
 <com.google.android.material.bottomnavigation.BottomNavigationView
     android:id="@+id/bottomNavigationView"
     android:layout_width="match_parent"
-    android:layout_height="75dp"
+    android:layout_height="56dp"
+    android:background="#0F184D"
+    app:itemTextColor="@color/bottom_nav_color"
+    app:itemIconTint="@color/bottom_nav_color"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.5"
