Acréscimo de cores dos botões

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,9 @@
     <color name="primary">#262c51</color>
     <color name="secondary">#8C9CFF</color>
     <color name="darkSecondary">#131627</color>
+
+    <color name="botaoSelecionado">#F3C641</color>
+    <color name="textoBotaoSelecionado">#071025</color>
+    <color name="botaoNaoSelecionado">#0F184D</color>
+    <color name="textoBotaoNaoSelecionado">#FFFFFF</color>
 </resources>
