--- a/app/src/main/res/drawable/edit_text_border.xml
+++ b/app/src/main/res/drawable/edit_text_border.xml
@@ -10,6 +10,6 @@
         android:topLeftRadius="5dp"
         android:topRightRadius="5dp"/>
     <stroke
-        android:color="#FFFFFF"
+        android:color="#D0D0D0"
         android:width="1dp"/>
 </shape>
